--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsdoc": "^4.6.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "next": "1.0.0"
@@ -12,6 +13,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "lint": "eslint pages",
     "start": "next start"
   }
 }
