--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "test",
   "dependencies": {
-    "babel-eslint": "^7.1.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^2.0.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsdoc": "^4.6.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
-    "next": "1.0.0"
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-require-jsdoc": "^1.0.4",
+    "next": "^8.0.3"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "lint": "eslint pages",
+    "lint": "eslint pages/index.js",
     "start": "next start"
   }
 }
